Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
None
-
None
-
Unexpected results
Description
Consider example
mariadb > CREATE TABLE invoice (
|
id UUID DEFAULT(uuid()) PRIMARY KEY,
|
product VARCHAR(64),
|
amount DECIMAL(12,2),
|
sold_at TIMESTAMP ) ENGINE=DuckDB DEFAULT CHARSET utf8mb4;
|
Query OK, 0 rows affected (0.016 sec)
|
|
|
mariadb > INSERT INTO invoice (product, amount, sold_at)
|
VALUES ('MariaDB mug', 12.00, NOW()),
|
('DuckDB sticker', 2.50, NOW()),
|
('Sea lion plush', 25.00, NOW()),
|
('DuckDB sticker', 2.50, NOW());
|
Query OK, 4 rows affected (0.009 sec)
|
Records: 4 Duplicates: 0 Warnings: 0
|
|
|
mariadb > SELECT id, product, amount FROM invoice;
|
+--------------------------------------+----------------+--------+
|
| id | product | amount |
|
+--------------------------------------+----------------+--------+
|
| 00000000-0000-0000-0000-000000000000 | MariaDB mug | 12.00 |
|
| 00000000-0000-0000-0000-000000000000 | DuckDB sticker | 2.50 |
|
| 00000000-0000-0000-0000-000000000000 | Sea lion plush | 25.00 |
|
| 00000000-0000-0000-0000-000000000000 | DuckDB sticker | 2.50 |
|
+--------------------------------------+----------------+--------+
|
4 rows in set (0.003 sec)
|