MDEV-40265 fix: UUID type support in DuckDB and mixed SELECT statements.